# books-daily-updates

./: .env.example  .gitignore  GLOBAL_SUPER_APP_PROMPT.md  SETUP.md  pyproject.toml  run.py  start.bat
.github/workflows/: ci.yml
backend/: config.py  main.py  requirements.txt
backend/data/: books_list_1.xlsx  books_list_2.xlsx  generate_sample.py  seed_catalog.py
backend/data/uploads/: 500_AI_Project_Ideas_1778691392.xlsx  AI_TechStack_Learning_Tracker_1778691420.xlsx  Books_By_Category_1778691631.xlsx  Must_Read_Books_Curated_List_1778690395.xlsx  Must_Read_Books_Expanded_IT_CEOs_Quantum_1778690270.xlsx  Self_Improvement_Books_500_Library_1778689192.xlsx  Top5_Books_25_Categories_1778689190.xlsx  test_1778668697.xlsx  test_1778668758.xlsx  test_1778668809.xlsx  test_1778668878.xlsx  test_books_1778668416.xlsx
backend/database/: connection.py  models.py
backend/models/: schemas.py
backend/routes/: books.py  catalog.py  cricfy.py  media.py  podcasts.py  reading.py  search.py  store.py  users.py  videos.py
backend/services/: ai_summarizer.py  excel_parser.py  notification_service.py  recommender.py  shipping_service.py  vector_search.py
backend/static/: upload.html
backend/tasks/: scheduler.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  api.js  styles.css
frontend/src/components/: BookCard.js  MediaCard.js  Navbar.js  Toggle.js
frontend/src/context/: AppContext.js
frontend/src/pages/: BooksPage.js  CartPage.js  CricfyTv.js  Dashboard.js  Library.js  (+5 more)
mobile/: App.js  app.json  package.json
