[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "books-daily-updates"
version = "1.0.0"
description = "Daily book chapter summaries with multi-channel notifications"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "apscheduler>=3.10.4",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "pandas>=2.1.0",
    "openpyxl>=3.1.2",
    "python-telegram-bot>=20.7",
    "twilio>=9.0.2",
    "sentence-transformers>=2.2.0",
]
